--- a/_config.yml
+++ b/_config.yml
@@ -66,4 +66,19 @@ plugins:
 
 plugins:
   - jekyll-feed
- 
+
+
+# Set which comment system to use
+comments:
+  # 'disqus' or 'utterances' are available
+  provider:            utterances
+
+
+# You must install utterances github app before use.(https://github.com/apps/utterances)
+# Make sure all variables are set properly. Check below link for detail.
+# https://utteranc.es/
+utterances:
+  repo:                "zayngdev/zayngdev.github.io"
+  issue-term:          "pathname"
+  label:               "Comments"
+  theme:               "github-light"
